--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -14,6 +14,16 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v2
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+
+      - name: Setup yarn
+        uses: borales/actions-yarn@v4.2.0
+        with:
+          cmd: --version
+
       - name: Setup .NET 8 SDK
         uses: actions/setup-dotnet@v1.7.2
         with:
