--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "devDependencies": {
+    "@types/node": "^24.7.2",
     "@vitejs/plugin-react": "^5.0.4",
     "bulma": "^1.0.4",
     "gh-pages": "^6.3.0",
