--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageVersion>
+    <PackageVersion Include="Fable.Promise" Version="3.2.0" />
     <PackageVersion Include="Feliz" Version="2.9.0" />
     <!--
         Extension packages are stuck on Feliz.Bulma 3.0.0 which supports Bulma 0.9.4
