feat: restrict Feliz.Bulma version as Bulma extensions don't works with Bulma v1
Tag: Feliz.Bulma.Badge
Tag: Feliz.Bulma.Checkradio
Tag: Feliz.Bulma.DateTimePicker
Tag: Feliz.Bulma.Divider
Tag: Feliz.Bulma.PageLoader
Tag: Feliz.Bulma.Popover
Tag: Feliz.Bulma.QuickView
Tag: Feliz.Bulma.Slider
Tag: Feliz.Bulma.Switch
Tag: Feliz.Bulma.TagsInput
Tag: Feliz.Bulma.Timeline
Tag: Feliz.Bulma.Tooltip

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -18,11 +18,9 @@
     </PackageVersion>
     <PackageVersion Include="Feliz" Version="2.9.0" />
     <!--
-        Extension packages are stuck on Feliz.Bulma 3.0.0 which supports Bulma 0.9.4
-
-        So we force an exact match
+        Extension packages are stuck on Feliz.Bulma 3.x which supports Bulma 0.9.4
     -->
-    <PackageVersion Include="Feliz.Bulma" Version="[3.0.0]" />
+    <PackageVersion Include="Feliz.Bulma" Version="[3.0.0,4.0.0)" />
     <PackageVersion Include="Feliz.Router" Version="4.0.0" />
     <PackageVersion Include="FSharp.Core" Version="5.0.2" />
   </ItemGroup>
