--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "private": true,
-  "devDependencies": {
-    "@types/node": "^24.7.2",
-    "@vitejs/plugin-react": "^5.0.4",
-    "bulma": "^1.0.4",
-    "gh-pages": "^6.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-highlight": "^0.15.0",
-    "react-shiki": "^0.9.0",
-    "sass-embedded": "^1.93.2",
-    "vite": "^7.1.11"
-  }
+    "name": "feliz-bulma",
+    "private": true,
+    "devDependencies": {
+        "@types/node": "^24.7.2",
+        "@vitejs/plugin-react": "^5.0.4",
+        "bulma": "^1.0.4",
+        "gh-pages": "^6.3.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-highlight": "^0.15.0",
+        "react-shiki": "^0.9.0",
+        "sass-embedded": "^1.93.2",
+        "vite": "^7.1.11"
+    }
 }
